# flatqt

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  mybuf.fbs
